created jupyter for quasiclassical calculationes

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +111,15 @@
     "\n",
     "    r_mesh, polar_mesh = np.meshgrid(r_points, polar_points)\n",
     "\n",
+    "    m_centrifugal = (1.0 / (2 * mass_u * U * (r_mesh ** 2)) + rot_const) * (omega_init ** 2) / (np.sin(polar_mesh) ** 2)\n",
+    "\n",
     "    potential = load_potential(potential_path, \"potential.dat\", r_grid, polar_grid, 5, 5, False)\n",
     "    if transform_potential is not None:\n",
     "        potential = np.multiply(potential, transform_potential(r_mesh, polar_mesh))\n",
     "\n",
     "    centrifugal_potential = centrifugal(r_points, j_tot, omega_init, mass_u)\n",
-    "    centrifugal_potential = np.broadcast_to(np.expand_dims(centrifugal_potential, 1), (r_no, polar_no))\n",
+    "    centrifugal_potential = np.broadcast_to(np.expand_dims(centrifugal_potential, 1), (r_no, polar_no)) \\\n",
+    "\n",
     "\n",
     "    bsigma_gamma = load_potential(potential_path, \"BSigma_gamma.dat\", r_grid, polar_grid, 5, 5, True)\n",
     "    if transform_bsigma is not None:\n",
@@ -221,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -229,13 +232,16 @@
      "output_type": "stream",
      "text": [
       "j init: 0, omega init: 0, j_tot: 150\n",
-      "[0.4647287664033311, 0.1960235411862791]\n"
+      "bsigma loss: 0.43968510740923883\n",
+      "xpi loss: 0.20676032235104302\n",
+      "leak control loss: 0.000000012447300454961778\n",
+      "[0.43968510740923883, 0.20676032235104302]\n"
      ]
     }
    ],
    "source": [
     "print(\"j init: 0, omega init: 0, j_tot: 150\")\n",
-    "propagation = prepare(0, 0, 150, animation=True) # time step as if was halfed as oposed to the implementation in rust ?\n",
+    "propagation = prepare(1, 1, 150, animation=True) # time step as if was halfed as oposed to the implementation in rust ?\n",
     "\n",
     "propagation.propagate()\n",
     "print(propagation.get_losses())\n",
@@ -1647,7 +1653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
