gif generation, analisys of semiclassical calculations

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -232,10 +232,10 @@
      "output_type": "stream",
      "text": [
       "j init: 0, omega init: 0, j_tot: 150\n",
-      "bsigma loss: 0.43968510740923883\n",
-      "xpi loss: 0.20676032235104302\n",
-      "leak control loss: 0.000000012447300454961778\n",
-      "[0.43968510740923883, 0.20676032235104302]\n"
+      "bsigma loss: 0.4400325241106945\n",
+      "[0.4400325241106945, 0.20649488649738457]\n",
+      "xpi loss: 0.20649488649738457\n",
+      "leak control loss: 0.000000012415800936355673\n"
      ]
     }
    ],
@@ -396,9 +396,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJądro Kernel uległo awarii podczas wykonywania kodu w bieżącej komórce lub w poprzedniej komórce. \n",
+      "\u001b[1;31mPrzejrzyj kod w komórkach, aby zidentyfikować możliwą przyczynę awarii. \n",
+      "\u001b[1;31mKliknij <a href='https://aka.ms/vscodeJupyterKernelCrash'>tutaj</a>, aby uzyskać więcej informacji. \n",
+      "\u001b[1;31mAby uzyskać dalsze szczegóły, wyświetl <a href='command:jupyter.viewOutput'>dziennik</a> Jupyter."
+     ]
+    }
+   ],
    "source": [
     "j_init = 1\n",
     "omega_init = 1\n",
